More index view updates

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,10 +16,15 @@
             Prototype versions
         </h2>
 
-        {% set currentVersionHtml %}
+        {% set researchVersionsHtml %}
             <time datetime="2019-11-11" class="govuk-caption-l">11 November 2019</time>
 
             <h2 class="govuk-heading-l">MVP v1</h2>
+
+            <a href="/mvp1/signin" class="govuk-button govuk-!-margin-right-1">View MVP prototype</a>
+            <a href="/mvp1/dashboard-service-prap-no-orgs" class="govuk-button">View 'no organisations' dashboard</a>
+
+            <h3 class="govuk-heading-m">General changes</h3>
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
@@ -54,8 +59,21 @@
                 </li>
             </ul>
 
-            <a href="/mvp1/signin" class="govuk-button govuk-!-margin-right-1">View MVP prototype</a>
-            <a href="/mvp1/dashboard-service-prap-no-orgs" class="govuk-button">View 'no organisations' dashboard</a>
+            <h3 class="govuk-heading-m">UR Goals</h3>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>
+                    Goal 1
+                </li>
+            </ul>
+
+            <h3 class="govuk-heading-m">Findings</h3>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>
+                    Finding/recommendation 1
+                </li>
+            </ul>
 
             <h3 class="govuk-heading-m">Confidence level</h3>
 
@@ -120,50 +138,26 @@
 
             <h2 class="govuk-heading-l">v4</h2>
 
+            <a href="/v4/signin" class="govuk-button govuk-!-margin-right-1">View v4 prototype</a>
+            <a href="/v4/dashboard-service-prap-no-orgs" class="govuk-button">View 'no organisations' dashboard</a>
+
+            <h3 class="govuk-heading-m">General changes</h3>
+
             <ul class="govuk-list govuk-list--bullet">
                 <li>
                     'Is user employed by the DWP?' question in Add User journey
                 </li>
             </ul>
 
-            <a href="/v4/signin" class="govuk-button govuk-!-margin-right-1">View v4 prototype</a>
-            <a href="/v4/dashboard-service-prap-no-orgs" class="govuk-button">View 'no organisations' dashboard</a>
-
-            <!--<table class="govuk-table">
-                <thead class="govuk-table__head">
-                    <tr class="govuk-table__row">
-                        <th class="govuk-table__header" scope="col">User research finding</th>
-                        <th class="govuk-table__header" scope="col">Potential solutions</th>
-                        <th class="govuk-table__header" scope="col">Iteration made</th>
-                    </tr>
-                </thead>
-
-                <tbody class="govuk-table__body">
-                    <tr class="govuk-table__row">
-                        <td class="govuk-table__cell">Finding 1</td>
-                        <td class="govuk-table__cell">Interpretation 1</td>
-                        <td class="govuk-table__cell">Iteration 1</td>
-                    </tr>
-
-                    <tr class="govuk-table__row">
-                        <td class="govuk-table__cell">Finding 2</td>
-                        <td class="govuk-table__cell">Interpretation 2</td>
-                        <td class="govuk-table__cell">Iteration 2</td>
-                    </tr>
-
-                    <tr class="govuk-table__row">
-                        <td class="govuk-table__cell">Finding 3</td>
-                        <td class="govuk-table__cell">Interpretation 3</td>
-                        <td class="govuk-table__cell">Iteration 3</td>
-                    </tr>
-                </tbody>
-            </table>-->
-
             <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
             <time datetime="2019-10-24" class="govuk-caption-l">24 October 2019</time>
 
             <h2 class="govuk-heading-l" id="v3">v3</h2>
+
+            <a href="/v3/dashboard-root" class="govuk-button">View as System admin</a>
+            <a href="/v3/dashboard-service-health-assessment" class="govuk-button">View as Service admin</a>
+            <a href="/v3/user-list-capita" class="govuk-button">View as Organisation admin</a>
 
             <h3 class="govuk-heading-m">General changes</h3>
 
@@ -205,10 +199,6 @@
                     Updated 'service edit' journey to match new 'service add' steps
                 </li>
             </ul>
-
-            <a href="/v3/dashboard-root" class="govuk-button">View as System admin</a>
-            <a href="/v3/dashboard-service-health-assessment" class="govuk-button">View as Service admin</a>
-            <a href="/v3/user-list-capita" class="govuk-button">View as Organisation admin</a>
 
             <h3 class="govuk-heading-m">Confidence level</h3>
 
@@ -360,35 +350,13 @@
                 </li>
             </ul>
 
-            <table class="govuk-table">
-                <thead class="govuk-table__head">
-                    <tr class="govuk-table__row">
-                        <th class="govuk-table__header" scope="col">User research finding</th>
-                        <th class="govuk-table__header" scope="col">Potential solutions</th>
-                        <th class="govuk-table__header" scope="col">Iteration made</th>
-                    </tr>
-                </thead>
+            <h3 class="govuk-heading-m">Findings</h3>
 
-                <tbody class="govuk-table__body">
-                    <tr class="govuk-table__row">
-                        <td class="govuk-table__cell">Users did not understand the term 'Service Groups'</td>
-                        <td class="govuk-table__cell"> - </td>
-                        <td class="govuk-table__cell">We've removed the 'Service Groups' layer, as we may not need these for a long time.</td>
-                    </tr>
-
-                    <tr class="govuk-table__row">
-                        <td class="govuk-table__cell">Finding 2</td>
-                        <td class="govuk-table__cell">Interpretation 2</td>
-                        <td class="govuk-table__cell">Iteration 2</td>
-                    </tr>
-
-                    <tr class="govuk-table__row">
-                        <td class="govuk-table__cell">Finding 3</td>
-                        <td class="govuk-table__cell">Interpretation 3</td>
-                        <td class="govuk-table__cell">Iteration 3</td>
-                    </tr>
-                </tbody>
-            </table>
+            <ul class="govuk-list govuk-list--bullet">
+                <li>
+                    Users did not understand the term 'Service Groups'
+                </li>
+            </ul>
 
             <h3 class="govuk-heading-m">Confidence level</h3>
 
@@ -460,10 +428,10 @@
         {{ govukTabs({
             items: [
                 {
-                    label: "Current version",
-                    id: "current-version",
+                    label: "Research versions",
+                    id: "research-versions",
                     panel: {
-                        html: currentVersionHtml
+                        html: researchVersionsHtml
                     }
                 },
                 {
