Make typeahead only kick in from 3 characters+

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -57,6 +57,9 @@
                 <li>
                     Changed organisation list views to make functionality more obvious
                 </li>
+                <li>
+                    Made typeahead minLength before searching 3 characters
+                </li>
             </ul>
 
             <h3 class="govuk-heading-m">UR Goals</h3>
