--- a/app/views/mvp1/user-add-user-prap-org.html
+++ b/app/views/mvp1/user-add-user-prap-org.html
@@ -54,7 +54,8 @@
 <script type="text/javascript">
     accessibleAutocomplete.enhanceSelectElement({
         defaultValue: '',
-        selectElement: document.getElementById('organisation-name')
+        selectElement: document.getElementById('organisation-name'),
+        minLength: 3
     });
 </script>
 {% endblock %}
