--- a/app/views/mvp1/user-list-prap-g3s-2.html
+++ b/app/views/mvp1/user-list-prap-g3s-2.html
@@ -70,7 +70,7 @@
 
   <nav role="navigation" aria-label="Pagination">
     <div class="pagination__summary">
-      Showing 10 &ndash; 15 of 15 results
+      Showing 10 &ndash; 15 of 15 users
     </div>
 
     <ul class="pagination">
