--- a/app/views/mvp1/user-list-prap-2.html
+++ b/app/views/mvp1/user-list-prap-2.html
@@ -94,7 +94,7 @@
 
   <nav role="navigation" aria-label="Pagination">
       <div class="pagination__summary">
-        Showing 11 &ndash; 20 of 74 results
+        Showing 11 &ndash; 20 of 74 users
       </div>
 
       <ul class="pagination">
