--- a/app/views/mvp1/user-list-prap-3.html
+++ b/app/views/mvp1/user-list-prap-3.html
@@ -98,7 +98,7 @@
 
   <nav role="navigation" aria-label="Pagination">
       <div class="pagination__summary">
-        Showing 21 &ndash; 30 of 74 results
+        Showing 21 &ndash; 30 of 74 users
       </div>
 
       <ul class="pagination">
