--- a/app/views/mvp1/user-list-prap-5.html
+++ b/app/views/mvp1/user-list-prap-5.html
@@ -104,7 +104,7 @@
 
   <nav role="navigation" aria-label="Pagination">
       <div class="pagination__summary">
-        Showing 41 &ndash; 50 of 74 results
+        Showing 41 &ndash; 50 of 74 users
       </div>
 
       <ul class="pagination">
