--- a/app/views/mvp1/user-list-prap-capita-2.html
+++ b/app/views/mvp1/user-list-prap-capita-2.html
@@ -57,7 +57,7 @@
 
   <nav role="navigation" aria-label="Pagination">
     <div class="pagination__summary">
-      Showing 10 &ndash; 13 of 13 results
+      Showing 10 &ndash; 13 of 13 users
     </div>
 
     <ul class="pagination">
