--- a/app/views/mvp1/user-list-prap-capita.html
+++ b/app/views/mvp1/user-list-prap-capita.html
@@ -103,7 +103,7 @@
 
   <nav role="navigation" aria-label="Pagination">
     <div class="pagination__summary">
-      Showing 1 &ndash; 10 of 13 results
+      Showing 1 &ndash; 10 of 13 users
     </div>
 
     <ul class="pagination">
