--- a/app/views/mvp1/user-list-prap-remploy-2.html
+++ b/app/views/mvp1/user-list-prap-remploy-2.html
@@ -101,7 +101,7 @@
 
   <nav role="navigation" aria-label="Pagination">
     <div class="pagination__summary">
-      Showing 10 &ndash; 20 of 23 results
+      Showing 10 &ndash; 20 of 23 users
     </div>
 
     <ul class="pagination">
