--- a/app/views/mvp1/user-list-prap-remploy-3.html
+++ b/app/views/mvp1/user-list-prap-remploy-3.html
@@ -56,7 +56,7 @@
 
   <nav role="navigation" aria-label="Pagination">
     <div class="pagination__summary">
-      Showing 20 &ndash; 23 of 23 results
+      Showing 20 &ndash; 23 of 23 users
     </div>
 
     <ul class="pagination">
