--- a/app/views/mvp1/user-add-user-prap-org.html
+++ b/app/views/mvp1/user-add-user-prap-org.html
@@ -64,8 +64,15 @@
             </form>
 
             {% if data['org-error'] %}
-                <a href="/mvp1/organisation-add-prap" class="govuk-link">Add an organisation</a><br>
-                <a href="/mvp1/organisation-list-prap" class="govuk-link">View all organisations</a>
+                <p>
+                    <a href="/mvp1/organisation-add-prap" class="govuk-link">
+                        Add an organisation
+                    </a><br>
+
+                    <a href="/mvp1/organisation-list-prap" class="govuk-link">
+                        View all organisations
+                    </a>
+                </p>
             {% endif %}
         </div>
     </div>
