--- a/app/views/dev1/user-list-prap-6.html
+++ b/app/views/dev1/user-list-prap-6.html
@@ -104,7 +104,7 @@
 
   <nav role="navigation" aria-label="Pagination">
       <div class="pagination__summary">
-        Showing 51 &ndash; 60 of 74 results
+        Showing 51 &ndash; 60 of 74 users
       </div>
 
       <ul class="pagination">
