--- a/app/views/dev1/user-list-prap-8.html
+++ b/app/views/dev1/user-list-prap-8.html
@@ -62,7 +62,7 @@
 
   <nav role="navigation" aria-label="Pagination">
       <div class="pagination__summary">
-        Showing 71 &ndash; 74 of 74 results
+        Showing 71 &ndash; 74 of 74 users
       </div>
 
       <ul class="pagination">
