--- a/app/views/dev1/user-list-prap-croydon.html
+++ b/app/views/dev1/user-list-prap-croydon.html
@@ -99,7 +99,7 @@
 
   <nav role="navigation" aria-label="Pagination">
     <div class="pagination__summary">
-      Showing 1 &ndash; 10 of 15 results
+      Showing 1 &ndash; 10 of 15 users
     </div>
 
     <ul class="pagination">
