--- a/app/views/dev1/user-list-prap.html
+++ b/app/views/dev1/user-list-prap.html
@@ -102,7 +102,7 @@
 
   <nav role="navigation" aria-label="Pagination">
     <div class="pagination__summary">
-      Showing 1 &ndash; 10 of 74 results
+      Showing 1 &ndash; 10 of 74 users
     </div>
 
     <ul class="pagination">
