--- a/app/views/mvp1/user-view.html
+++ b/app/views/mvp1/user-view.html
@@ -19,6 +19,22 @@
                 User details
             </h1>
 
+            {% set userStatus %}
+                {% if data['user-full-name'] %}
+                Pending activation
+                {% else %}
+                Active
+                {% endif %}
+            {% endset %}
+
+            {% set userCreated %}
+                {% if data['user-full-name'] %}
+                <div id="current-time"></div>
+                {% else %}
+                9 April 1982, 7:52pm
+                {% endif %}
+            {% endset %}
+
             {{ govukSummaryList({
                 rows: [
                     {
@@ -50,7 +66,7 @@
                             text: "Status"
                         },
                         value: {
-                            html: "Active"
+                            html: userStatus
                         }
                     },
                     {
@@ -66,52 +82,48 @@
                             text: "Created"
                         },
                         value: {
-                            html: '9 April 1982, 7:52pm'
+                            html: userCreated
                         }
                     }
                 ]
             }) }}
 
             <form id="form" method="post" action="reinvite-confirm">
+                {{ govukRadios({
+                    classes: "govuk-radios",
+                    idPrefix: "user-task",
+                    name: "user-task",
+                    fieldset: {
+                    legend: {
+                        text: "Which task would you like to perform?",
+                        isPageHeading: true,
+                        classes: "govuk-fieldset__legend--m"
+                    }
+                    },
+                    items: [
+                    {
+                        value: "reinvite",
+                        text: "Resend invitation"
+                    },
+                    {
+                        value: "suspend",
+                        text: "Suspend the user"
+                    },
+                    {
+                        value: "delete",
+                        text: "Delete the user"
+                    }
+                    ]
+                }) }}
 
-            {{ govukRadios({
-                classes: "govuk-radios",
-                idPrefix: "user-task",
-                name: "user-task",
-                fieldset: {
-                  legend: {
-                    text: "Which task would you like to perform?",
-                    isPageHeading: true,
-                    classes: "govuk-fieldset__legend--m"
-                  }
-                },
-                items: [
-                  {
-                    value: "reinvite",
-                    text: "Resend invitation"
-                  },
-                  {
-                    value: "suspend",
-                    text: "Suspend the user"
-                  },
-                  {
-                    value: "delete",
-                    text: "Delete the user"
-                  }
-                ]
-              }) }}
-
-
-              <input type="submit" class="govuk-button govuk-!-margin-right-1" value="Continue" id="submit">
-
-
-
-        </form>
+                <button type="submit" class="govuk-button govuk-!-margin-right-1" id="submit">
+                    Continue
+                </button>
+            </form>
 
             <p class="govuk-!-margin-top-9">
                 <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
             </p>
-
         </div>
     </div>
 
@@ -121,6 +133,36 @@
           reinvite: 'reinvite-confirm.html',
           suspend: 'suspend-check.html',
           delete: 'delete-check.html',
-        }
+        };
+
+        var currentDateElem = document.getElementById('current-time');
+
+        //9 April 1982, 7:52pm
+        var currentDate = new Date();
+        var currentDay = currentDate.getDate();
+        var currentMonth = currentDate.getMonth();
+        var currentYear = currentDate.getFullYear();
+        var currentHour = currentDate.getHours();
+        var currentMinutes = currentDate.getMinutes();
+        var currentTimeOfDay = (currentDate.getHours() < 12) ? 'am' : 'pm';
+
+        var months = [
+            'January',
+            'February',
+            'March',
+            'April',
+            'May',
+            'June',
+            'July',
+            'August',
+            'Spetember',
+            'October',
+            'November',
+            'December'
+        ];
+
+        var currentStamp = currentDay + ' ' + months[currentMonth] + ' ' + currentYear + ', ' + currentHour + ':' + currentMinutes + currentTimeOfDay;
+
+        currentDateElem.innerHTML = currentStamp;
       </script>
 {% endblock %}
