Adding other prototypes details link to index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,14 +17,15 @@
         </h2>
 
         {% set researchVersionsHtml %}
-            <time datetime="2019-11-11" class="govuk-caption-l">11 November 2019</time>
+
+            <time datetime="2019-11-11" class="govuk-caption-m">11 November 2019</time>
 
             <h2 class="govuk-heading-l">MVP v1</h2>
 
             <a href="/mvp1/signin" class="govuk-button govuk-!-margin-right-1">View MVP prototype</a>
             <a href="/mvp1/dashboard-service-prap-no-orgs" class="govuk-button">View 'no organisations' dashboard</a>
 
-            <h3 class="govuk-heading-m">General changes</h3>
+            <h3 class="govuk-heading-s">General changes</h3>
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
@@ -62,7 +63,7 @@
                 </li>
             </ul>
 
-            <h3 class="govuk-heading-m">UR Goals</h3>
+            <h3 class="govuk-heading-s">UR Goals</h3>
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
@@ -70,7 +71,7 @@
                 </li>
             </ul>
 
-            <h3 class="govuk-heading-m">Findings</h3>
+            <h3 class="govuk-heading-s">Findings</h3>
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
@@ -78,28 +79,9 @@
                 </li>
             </ul>
 
-            <h3 class="govuk-heading-m">Confidence level</h3>
+            <h3 class="govuk-heading-s">Confidence level</h3>
 
-            <details class="govuk-details" role="group">
-                <summary
-                    class="govuk-details__summary"
-                    role="button"
-                    aria-controls="details-content-confidence-levels"
-                    aria-expanded="false"
-                >
-                    <span class="govuk-details__summary-text">
-                        What is this?
-                    </span>
-                </summary>
-
-                <div
-                    class="govuk-details__text"
-                    id="details-content-confidence-levels"
-                    aria-hidden="true"
-                >
-                    Confidence can rise and fall in the course of a user journey, depending on what we know at that time. This helps the team, and the wider organisation, understand and prioritise what needs more work.
-                </div>
-            </details>
+           
 
             <table class="govuk-table">
                 <thead class="govuk-table__head">
@@ -137,14 +119,25 @@
                 </tbody>
             </table>
 
-            <time datetime="2019-11-27" class="govuk-caption-l">27 November 2019</time>
+
+
+     <details class="govuk-details govuk-!-margin-top-9">
+                <summary class="govuk-details__summary">
+                  <span class="govuk-details__summary-text">
+                    Other prototype versions
+                  </span>
+                </summary>     
+        <div class="govuk-details__text">
+
+
+            <time datetime="2019-11-27" class="govuk-caption-m">27 November 2019</time>
 
             <h2 class="govuk-heading-l">v4</h2>
 
             <a href="/v4/signin" class="govuk-button govuk-!-margin-right-1">View v4 prototype</a>
             <a href="/v4/dashboard-service-prap-no-orgs" class="govuk-button">View 'no organisations' dashboard</a>
 
-            <h3 class="govuk-heading-m">General changes</h3>
+            <h3 class="govuk-heading-s">General changes</h3>
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
@@ -154,15 +147,15 @@
 
             <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-            <time datetime="2019-10-24" class="govuk-caption-l">24 October 2019</time>
+            <time datetime="2019-10-24" class="govuk-caption-m">24 October 2019</time>
 
             <h2 class="govuk-heading-l" id="v3">v3</h2>
 
-            <a href="/v3/dashboard-root" class="govuk-button">View as System admin</a>
-            <a href="/v3/dashboard-service-health-assessment" class="govuk-button">View as Service admin</a>
+            <a href="/v3/dashboard-root" class="govuk-button govuk-!-margin-right-1">View as System admin</a>
+            <a href="/v3/dashboard-service-health-assessment" class="govuk-button govuk-!-margin-right-1">View as Service admin</a>
             <a href="/v3/user-list-capita" class="govuk-button">View as Organisation admin</a>
 
-            <h3 class="govuk-heading-m">General changes</h3>
+            <h3 class="govuk-heading-s">General changes</h3>
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
@@ -203,28 +196,7 @@
                 </li>
             </ul>
 
-            <h3 class="govuk-heading-m">Confidence level</h3>
-
-            <details class="govuk-details" role="group">
-                <summary
-                    class="govuk-details__summary"
-                    role="button"
-                    aria-controls="details-content-confidence-levels"
-                    aria-expanded="false"
-                >
-                    <span class="govuk-details__summary-text">
-                        What is this?
-                    </span>
-                </summary>
-
-                <div
-                    class="govuk-details__text"
-                    id="details-content-confidence-levels"
-                    aria-hidden="true"
-                >
-                    Confidence can rise and fall in the course of a user journey, depending on what we know at that time. This helps the team, and the wider organisation, understand and prioritise what needs more work.
-                </div>
-            </details>
+            <h3 class="govuk-heading-s">Confidence level</h3>
 
             <table class="govuk-table">
                 <thead class="govuk-table__head">
@@ -287,13 +259,13 @@
                 </tbody>
             </table>
 
-            <time datetime="2019-10-21" class="govuk-caption-l">21 October 2019</time>
+            <time datetime="2019-10-21" class="govuk-caption-m">21 October 2019</time>
 
             <h2 class="govuk-heading-l">v2</h2>
 
             <a href="/v2/dashboard-root" class="govuk-button">Open prototype</a>
 
-            <h3 class="govuk-heading-m">General changes</h3>
+            <h3 class="govuk-heading-s">General changes</h3>
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
@@ -321,13 +293,13 @@
 
             <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-            <time datetime="2019-10-16" class="govuk-caption-l">16 October 2019</time>
+            <time datetime="2019-10-16" class="govuk-caption-m">16 October 2019</time>
 
             <h2 class="govuk-heading-l">v1</h2>
 
             <a href="/v1/dashboard-root" class="govuk-button">Open prototype</a>
 
-            <h3 class="govuk-heading-m">UR Goals</h3>
+            <h3 class="govuk-heading-s">UR Goals</h3>
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
@@ -353,7 +325,7 @@
                 </li>
             </ul>
 
-            <h3 class="govuk-heading-m">Findings</h3>
+            <h3 class="govuk-heading-s">Findings</h3>
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
@@ -361,28 +333,9 @@
                 </li>
             </ul>
 
-            <h3 class="govuk-heading-m">Confidence level</h3>
+            <h3 class="govuk-heading-s">Confidence level</h3>
 
-            <details class="govuk-details" role="group">
-                <summary
-                    class="govuk-details__summary"
-                    role="button"
-                    aria-controls="details-content-confidence-levels"
-                    aria-expanded="false"
-                >
-                    <span class="govuk-details__summary-text">
-                        What is this?
-                    </span>
-                </summary>
-
-                <div
-                    class="govuk-details__text"
-                    id="details-content-confidence-levels"
-                    aria-hidden="true"
-                >
-                    Confidence can rise and fall in the course of a user journey, depending on what we know at that time. This helps the team, and the wider organisation, understand and prioritise what needs more work.
-                </div>
-            </details>
+          
 
             <table class="govuk-table">
                 <thead class="govuk-table__head">
@@ -410,17 +363,20 @@
                 </tbody>
             </table>
 
-            <h3 class="govuk-heading-m">Useful links</h3>
+            <h3 class="govuk-heading-s">Useful links</h3>
 
             <ul class="govuk-list">
                 <li>
                     <a class="govuk-link" href="/public/files/discussion/admin-portal-discussion-guide-add-a-service-group-1.docx">Discussion guide</a>
                 </li>
             </ul>
+
+            </div>
+        </details>
         {% endset %}
 
         {% set devVersionsHtml %}
-            <time datetime="2019-11-28" class="govuk-caption-l">28 November 2019</time>
+            <time datetime="2019-11-28" class="govuk-caption-m">28 November 2019</time>
 
             <h2 class="govuk-heading-l">Dev-ready v1</h2>
 
