--- a/app/views/mvp1/user-add-user-prap-org.html
+++ b/app/views/mvp1/user-add-user-prap-org.html
@@ -63,8 +63,8 @@
                 </fieldset>
             </form>
 
-            {% if data['org-error'] %}
-                <p>
+            
+                <p class="govuk-!-margin-top-6">
                     <a href="/mvp1/organisation-add-prap" class="govuk-link">
                         Add an organisation
                     </a><br>
@@ -73,7 +73,7 @@
                         View all organisations
                     </a>
                 </p>
-            {% endif %}
+           
         </div>
     </div>
 {% endblock %}
@@ -86,7 +86,7 @@
         defaultValue: '',
         selectElement: document.getElementById('organisation-name'),
         minLength: 3,
-        tNoResults: () => 'An organisation with this name has not been added to this service. Check you have entered the organisation\'s name correctly or add a new organisation.'
+        tNoResults: () => 'We have not found an organisation with this name.'
     });
 </script>
 {% endblock %}
