--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -199,7 +199,7 @@ a.pagination__link:focus {
  }
 
 /**
- * Dashbaord cards
+ * Dashboard cards
  */
 
 .govuk-cards__item {
@@ -257,7 +257,7 @@ a.pagination__link:focus {
   }
 
   @include govuk-media-query($from: desktop) {
-    flex: 0 1 27%;
+    flex: 0 1 31.9%;
 
     &:not(:nth-child(3n+3)) {
       margin-right: 20px;
@@ -277,6 +277,87 @@ a.pagination__link:focus {
   }
 }
 
+/**
+ * Organisation view large contact card styles
+ */
+.govuk-card--contacts {
+    border: 1px solid #b1b4b6;
+    background-color: #fff;
+    margin-bottom: 20px;
+
+    &::after {
+        content: '';
+        clear: both;
+        display: table;
+    }
+}
+
+.govuk-card__primary,
+.govuk-card__secondary {
+    padding: 20px;
+    width: 50%;
+    height: 100%;
+
+    @include govuk-media-query($from: tablet) {
+        width: 50%;
+    }
+
+    @include govuk-media-query($until: tablet) {
+        width: 100%;
+    }
+}
+
+.govuk-card__primary {
+    position: relative;
+
+    &::after {
+        content: '';
+        position: absolute;
+        background-color: #b1b4b6;
+    }
+
+    @include govuk-media-query($from: tablet) {
+        float: left;
+
+        &::after {
+            width: 1px;
+            height: calc(100% - 40px);
+            top: 20px;
+            right: 0;
+        }
+    }
+
+    @include govuk-media-query($until: tablet) {
+        &::after {
+            width: calc(100% - 40px);
+            height: 1px;
+            bottom: 0;;
+            left: 20px;
+        }
+    }
+}
+
+.govuk-card__secondary {
+    float: right;
+}
+
+.govuk-card--contacts,
+.govuk-card__primary,
+.govuk-card__secondary {
+    box-sizing: border-box;
+
+    :last-child {
+        margin-bottom: 0;
+    }
+
+    :first-child {
+        margin-top: 0;
+    }
+}
+
+/**
+ * User type tag colours
+ */
 .govuk-tag--l1 {
     background-color: govuk-colour('pink');
 }
