--- a/app/views/index.html
+++ b/app/views/index.html
@@ -29,6 +29,9 @@
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
+                    Add first attempt at <a href="/mvp1/org-view-capita" class="govuk-link">organisation view</a> page
+                </li>
+                <li>
                     Slim down files to show only service admin routes
                 </li>
                 <li>
@@ -81,7 +84,7 @@
 
             <h3 class="govuk-heading-s">Confidence level</h3>
 
-           
+
 
             <table class="govuk-table">
                 <thead class="govuk-table__head">
@@ -126,7 +129,7 @@
                   <span class="govuk-details__summary-text">
                     Other prototype versions
                   </span>
-                </summary>     
+                </summary>
         <div class="govuk-details__text">
 
 
@@ -335,7 +338,7 @@
 
             <h3 class="govuk-heading-s">Confidence level</h3>
 
-          
+
 
             <table class="govuk-table">
                 <thead class="govuk-table__head">
