Add insights PDFs and links from index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -82,9 +82,15 @@
                 </li>
             </ul>
 
+            <h3 class="govuk-heading-s">Useful links</h3>
+
+            <ul class="govuk-list">
+                <li>
+                    <a class="govuk-link" href="/public/files/insights/mvp1-add-organisation-and-user.pdf">UR Insights - add an organisation and user</a>
+                </li>
+            </ul>
+
             <h3 class="govuk-heading-s">Confidence level</h3>
-
-
 
             <table class="govuk-table">
                 <thead class="govuk-table__head">
@@ -371,6 +377,10 @@
             <ul class="govuk-list">
                 <li>
                     <a class="govuk-link" href="/public/files/discussion/admin-portal-discussion-guide-add-a-service-group-1.docx">Discussion guide</a>
+                </li>
+
+                <li>
+                    <a class="govuk-link" href="/public/files/insights/v1-add-service-group.pdf">UR Insights - add a service group</a>
                 </li>
             </ul>
 
