--- a/app/views/mvp1/org-view-capita.html
+++ b/app/views/mvp1/org-view-capita.html
@@ -21,7 +21,7 @@
 
         <div class="govuk-card--contacts">
             <div class="govuk-card__primary">
-                <h2 class="govuk-heading-s">Company details</h2>
+                <h2 class="govuk-heading-m">Company details</h2>
 
                 <p>
                     12 The Street<br>
@@ -41,7 +41,7 @@
             </div>
 
             <div class="govuk-card__secondary">
-                <h2 class="govuk-heading-s">Primary contact</h2>
+                <h2 class="govuk-heading-m">Primary contact</h2>
 
                 <p>
                     Dave Smith<br>
@@ -128,7 +128,7 @@
                     legend: {
                         text: "Manage organisation and users",
                         isPageHeading: true,
-                        classes: "govuk-fieldset__legend--s govuk-!-margin-top-6"
+                        classes: "govuk-fieldset__legend--m govuk-!-margin-top-6"
                     }
                 },
                 items: [
