--- a/app/views/mvp1/reinvite-confirm.html
+++ b/app/views/mvp1/reinvite-confirm.html
@@ -30,7 +30,7 @@
         {{ govukPanel({
 
       
-          titleText: "Invitiation resent"
+          titleText: "Invitation resent"
   
     
         }) }}
