Updates Dev Ready index notes

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -393,8 +393,21 @@
 
             <h2 class="govuk-heading-l">Dev-ready v1</h2>
 
+            <h3 class="govuk-heading-s">General changes</h3>
+
+          
+
             <a href="/dev1/signin" class="govuk-button govuk-!-margin-right-1">View prototype</a>
             <a href="/dev1/dashboard-service-prap-no-orgs" class="govuk-button">View 'no organisations' dashboard</a>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>
+                    Removed 'Last logged in' from user details due to current technical challenges
+                </li>
+                <li>
+                    Removed 'Suspend the user' from user details
+                </li>
+            </ul>
         {% endset %}
 
         {{ govukTabs({
