--- a/app/views/mvp1/user-view.html
+++ b/app/views/mvp1/user-view.html
@@ -95,7 +95,7 @@
                     name: "user-task",
                     fieldset: {
                     legend: {
-                        text: "Which task would you like to perform?",
+                        text: "Change user's status",
                         isPageHeading: true,
                         classes: "govuk-fieldset__legend--m"
                     }
@@ -107,7 +107,7 @@
                     },
                     {
                         value: "suspend",
-                        text: "Suspend the user"
+                        text: "Remove user's access"
                     },
                     {
                         value: "delete",
