Update MVP org typeahead no results message

--- a/app/views/mvp1/user-add-user-prap-org.html
+++ b/app/views/mvp1/user-add-user-prap-org.html
@@ -90,7 +90,7 @@
         defaultValue: '',
         selectElement: document.getElementById('organisation-name'),
         minLength: 3,
-        tNoResults: () => 'We have not found an organisation with this name.'
+        tNoResults: () => 'No organisations found.'
     });
 </script>
 {% endblock %}
