--- a/app/views/mvp1/organisation-list-prap.html
+++ b/app/views/mvp1/organisation-list-prap.html
@@ -76,7 +76,9 @@
 
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
-                            Capita
+                            <a href="org-view-capita" class="govuk-link">
+                                Capita
+                            </a>
                         </th>
 
                         <td class="govuk-table__cell govuk-table__cell--numeric">
