--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -206,145 +206,113 @@ a.pagination__link:focus {
     box-sizing: border-box;
 
     @include govuk-media-query($until: tablet) {
-      margin-bottom: 20px;
+        margin-bottom: 20px;
     }
 
     @include govuk-media-query($from: tablet) {
-      float: left;
-      margin-bottom: 40px;
+        float: left;
+        margin-bottom: 40px;
     }
 
     @include govuk-media-query($from: desktop) {
-    width: 33.333333%;
+        width: 33.333333%;
 
-      &:not(:nth-child(3n+3)) {
-        padding-right: 20px;
-      }
+        &:not(:nth-child(3n+3)) {
+            padding-right: 20px;
+        }
     }
 
     @include govuk-media-query($from: tablet, $until: desktop) {
         width: 50%;
 
-      &:not(:nth-child(2n+2)) {
-        padding-right: 15px;
-      }
+        &:not(:nth-child(2n+2)) {
+            padding-right: 15px;
+        }
     }
 }
 
 /**
  * V2 cards with background colour
  */
-.govuk-cards--2 {
+.govuk-cards--2,
+.govuk-cards--3 {
     display: flex;
     flex-wrap: wrap;
 }
 
 .govuk-cards::after {
-  content: '';
-  display: block;
-  clear: both;
+    content: '';
+    display: block;
+    clear: both;
 }
 
 .govuk-cards--2__item {
-  box-sizing: border-box;
-  border: 1px solid #b1b4b6;
-  background-color: #f3f2f1;
-  padding: 20px;
-  margin-bottom: 20px;
+    box-sizing: border-box;
+    border: 1px solid #b1b4b6;
+    background-color: #f3f2f1;
+    padding: 20px;
+    margin-bottom: 20px;
 
-  :last-child {
-      margin-bottom: 0;
-  }
-
-  @include govuk-media-query($from: desktop) {
-    flex: 0 1 31.9%;
-
-    &:not(:nth-child(3n+3)) {
-      margin-right: 20px;
+    :last-child {
+        margin-bottom: 0;
     }
-  }
 
-  @include govuk-media-query($from: tablet, $until: desktop) {
-    flex: 0 1 calc(50% - 8px);
+    @include govuk-media-query($from: desktop) {
+        flex: 0 1 31.9%;
 
-    &:not(:nth-child(2n+2)) {
-      margin-right: 15px;
+        &.govuk-card--company {
+            flex: 0 0 66%;
+        }
+
+        &:not(:nth-child(3n+3)) {
+            margin-right: 20px;
+        }
+
+        .govuk-cards--3 &.govuk-card--contacts {
+            margin-right: 0;
+        }
     }
-  }
 
-  @include govuk-media-query($until: tablet) {
-    flex: 1 0 100%;
-  }
+    @include govuk-media-query($from: tablet, $until: desktop) {
+        flex: 0 1 calc(50% - 8px);
+
+        &.govuk-card--company {
+            flex: 0 0 66%;
+        }
+
+        &:not(:nth-child(2n+2)) {
+            margin-right: 15px;
+        }
+
+        .govuk-cards--3 &.govuk-card--contacts {
+            margin-right: 0;
+        }
+    }
+
+    @include govuk-media-query($until: tablet) {
+        flex: 1 0 100%;
+
+        &.govuk-card--company {
+            flex: 0 0 100%;
+        }
+    }
 }
 
 /**
  * Organisation view large contact card styles
  */
+.govuk-card--company,
 .govuk-card--contacts {
     border: 1px solid #b1b4b6;
     background-color: #fff;
     margin-bottom: 20px;
+    box-sizing: border-box;
 
     &::after {
         content: '';
         clear: both;
         display: table;
     }
-}
-
-.govuk-card__primary,
-.govuk-card__secondary {
-    padding: 20px;
-    width: 50%;
-    height: 100%;
-
-    @include govuk-media-query($from: tablet) {
-        width: 50%;
-    }
-
-    @include govuk-media-query($until: tablet) {
-        width: 100%;
-    }
-}
-
-.govuk-card__primary {
-    position: relative;
-
-    &::after {
-        content: '';
-        position: absolute;
-        background-color: #b1b4b6;
-    }
-
-    @include govuk-media-query($from: tablet) {
-        float: left;
-
-        &::after {
-            width: 1px;
-            height: calc(100% - 40px);
-            top: 20px;
-            right: 0;
-        }
-    }
-
-    @include govuk-media-query($until: tablet) {
-        &::after {
-            width: calc(100% - 40px);
-            height: 1px;
-            bottom: 0;;
-            left: 20px;
-        }
-    }
-}
-
-.govuk-card__secondary {
-    float: right;
-}
-
-.govuk-card--contacts,
-.govuk-card__primary,
-.govuk-card__secondary {
-    box-sizing: border-box;
 
     :last-child {
         margin-bottom: 0;
@@ -353,6 +321,10 @@ a.pagination__link:focus {
     :first-child {
         margin-top: 0;
     }
+}
+
+.govuk-card--contacts {
+    margin-right: 0;
 }
 
 /**
