Update dev-ready index information

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -395,8 +395,6 @@
 
             <h3 class="govuk-heading-s">General changes</h3>
 
-          
-
             <a href="/dev1/signin" class="govuk-button govuk-!-margin-right-1">View prototype</a>
             <a href="/dev1/dashboard-service-prap-no-orgs" class="govuk-button">View 'no organisations' dashboard</a>
 
@@ -406,6 +404,9 @@
                 </li>
                 <li>
                     Removed 'Suspend the user' from user details
+                </li>
+                <li>
+                    Added in research prototype version of 'choose user organisation' - accepted on the basis it may change after future user research
                 </li>
             </ul>
         {% endset %}
