New add org journey

--- a/app/views/mvp1/dashboard-service-prap.html
+++ b/app/views/mvp1/dashboard-service-prap.html
@@ -29,7 +29,7 @@
 
         <ul class="govuk-list">
             <li>
-                <a href="organisation-add-prap" class="govuk-link">Add an organisation</a>
+                <a href="organisation-add-name" class="govuk-link">Add an organisation</a>
             </li>
 
             <li>
