Fixed link to new add org journey

--- a/app/views/mvp1/organisation-list-prap.html
+++ b/app/views/mvp1/organisation-list-prap.html
@@ -16,7 +16,7 @@
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-l listing-page">Organisations using HTDS</h1>
 
-            <a href="organisation-add-prap" class="govuk-button listing-page">Add an organisation</a>
+            <a href="organisation-add-name" class="govuk-button listing-page">Add an organisation</a>
 
             <table class="govuk-table">
                 <thead class="govuk-table__head">
